[package]
name = "ufrume"
description = "A multithreaded CLI tool to organize your music from messy into a structured system defined by you."
license = "GPL-3.0"
authors = ["PandaDEV <contact@pandadev.net>"]
version = "1.0.2"
edition = "2024"
repository = "https://github.com/0PandaDEV/ufrume"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
walkdir = "2.5.0"
lofty = "0.24.0"
symphonia = { version = "0.6.0", features = ["all"] }
ebur128 = "0.1.10"
indicatif = "0.18.4"
console = "0.16.3"
rayon = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls", "query"] }
